--- a/user_settings.ini
+++ b/user_settings.ini
@@ -1,28 +1,34 @@
 [Environment]
-; company = ""
+company = "Cirieno Ltd"
 
 [Tray]
 useToast = true
 
 [DisableProxy]
-; enabled = true
+; active = false
+; enabled = false
 
 [EnableProxyOverrides]
-; active = true
-domainList = "*.cirieno.*"
+; active = false
+; enabled = false
+;domainList = "*.cirieno.*"
 
 [PreventSleep]
-; active = true
+; active = false
+; enabled = false
 
 [SetVolume]
+; active = false
 ; enabled = false
 
 [SetVolume_WithMouseWheel]
 active = true
+enabled = true
 step = 3
 
 [SwapMouseButtons]
-; enabled = false
+active = true
+enabled = false
 
 [AppDebugging]
 ; enabled = false
