Change icons; Update Autocorrect

--- a/user_settings.ini
+++ b/user_settings.ini
@@ -1,37 +1,39 @@
 [Environment]
 company = "Cirieno Ltd"
+user = "rob.mcinnes@cirieno.co.uk"
 
 [Tray]
 useToast = true
 
 [DisableProxy]
-; active = false
 ; enabled = false
+; active = false
 
 [EnableProxyOverrides]
-; active = false
 ; enabled = false
+; active = false
 ;domainList = "*.cirieno.*"
 
 [PreventSleep]
-; active = false
 ; enabled = false
+; active = false
 
 [SetVolume]
+enabled = true
 ; active = false
-; enabled = false
 
 [SetVolume_WithMouseWheel]
-active = true
 enabled = true
+active = true
 step = 3
 
 [SwapMouseButtons]
-active = true
-enabled = false
+enabled = true
+active = false
 
 [AppDebugging]
-; enabled = false
+enabled = false
+; active = false
 
 
 # ; EACH OF THESE HAS PROPERTIES [enabled, active, notify (via tooltip/toast)]
