renamed desktop-helper to AHK Desktop Helper everywhere; moved Tray setting into ini section Environment

--- a/user_settings.template.ini
+++ b/user_settings.template.ini
@@ -1,9 +1,14 @@
 [Environment]
 company = "Your_Company"
 user = "Your_Email"
-
-[Tray]
 useToast = true
+
+[SetKeyLocks]
+enabled = true
+notify = true
+capsOnLoad = false
+numOnLoad = true
+scrollOnLoad = false
 
 [SetVolume]
 enabled = true
@@ -17,18 +22,22 @@ active = true
 notify = true
 step = 3
 
-[PreventSleep]
+[UserHotkeys]
 enabled = true
-active = false
-notify = false
+active = true
+notify = true
+
+
+
+[PreventSleep]
+; enabled = true
+; active = false
+; notify = false
 
 [SwapMouseButtons]
-enabled = true
-active = false
-notify = false
-
-[SetKeyLocksOnLoad]
-enabled = true
+; enabled = true
+; active = false
+; notify = false
 
 ; [DisableProxy]
 ; enabled = false
@@ -41,22 +50,8 @@ enabled = true
 ; notify = false
 ; domainList = "*.your_domain.*"
 
-[UserHotkeys]
-enabled = true
-active = true
-notify = true
 
 [AppDebugging]
 ; enabled = false
 ; active = false
 ; notify = false
-
-
-# ; EACH OF THESE HAS PROPERTIES [enabled, active, notify (via tooltip/toast)]
-# ; DisableProxy
-# ; EnableProxyOverrides
-# ; PreventSleep
-# ; SetVolume
-# ; SetVolume_WithMouseWheel
-# ; SwapMouseButtons
-# ; Debugging
