--- a/user_settings.template.ini
+++ b/user_settings.template.ini
@@ -3,20 +3,20 @@ company = "Your_Company"
 user = "Your_Email"
 useToast = true
 
-[SetKeyLocks]
+[KeyLocks]
 enabled = true
 notify = true
 capsOnLoad = false
 numOnLoad = true
 scrollOnLoad = false
 
-[SetVolume]
+[Volume]
 enabled = true
 includeTens = true
 includeQuarters = true
 includeThirds = true
 
-[SetVolume_MouseWheel]
+[VolumeMouseWheel]
 enabled = true
 active = true
 notify = true
@@ -26,6 +26,10 @@ step = 3
 enabled = true
 active = true
 notify = true
+
+
+
+
 
 
 
@@ -49,7 +53,6 @@ notify = true
 ; active = false
 ; notify = false
 ; domainList = "*.your_domain.*"
-
 
 [AppDebugging]
 ; enabled = false
