--- a/user_settings.template.ini
+++ b/user_settings.template.ini
@@ -10,6 +10,16 @@ capsOnLoad = false
 numOnLoad = true
 scrollOnLoad = false
 
+[SwapMouseButtons]
+enabled = true
+active = false
+notify = false
+
+[UserHotkeys]
+enabled = true
+active = true
+notify = true
+
 [Volume]
 enabled = true
 includeTens = true
@@ -22,10 +32,7 @@ active = true
 notify = true
 step = 3
 
-[UserHotkeys]
-enabled = true
-active = true
-notify = true
+
 
 
 
@@ -38,10 +45,7 @@ notify = true
 ; active = false
 ; notify = false
 
-[SwapMouseButtons]
-; enabled = true
-; active = false
-; notify = false
+
 
 ; [DisableProxy]
 ; enabled = false
