Commit before changing to AHKv2

--- a/user_settings.template.ini
+++ b/user_settings.template.ini
@@ -3,6 +3,7 @@ company = "Your_Company"
 user = "Your_Email"
 useToast = true
 
+
 [KeyLocks]
 enabled = true
 notify = true
@@ -10,21 +11,25 @@ capsOnLoad = false
 numOnLoad = true
 scrollOnLoad = false
 
+
 [SwapMouseButtons]
 enabled = true
 active = false
 notify = false
+
 
 [UserHotkeys]
 enabled = true
 active = true
 notify = true
 
+
 [Volume]
 enabled = true
 includeTens = true
 includeQuarters = true
 includeThirds = true
+
 
 [VolumeMouseWheel]
 enabled = true
@@ -33,17 +38,12 @@ notify = true
 step = 3
 
 
-
-
-
-
-
-
-
 [PreventSleep]
-; enabled = true
-; active = false
-; notify = false
+enabled = true
+active = false
+notify = false
+timeoutMins = 5
+
 
 
 
@@ -58,7 +58,7 @@ step = 3
 ; notify = false
 ; domainList = "*.your_domain.*"
 
-[AppDebugging]
+; [AppDebugging]
 ; enabled = false
 ; active = false
 ; notify = false
