Changed autocorrect engine and updated source strings; changed module templating; added some modules and handy hotkeys

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 resources/
-AHK Desktop Helper.exe - Shortcut.lnk
 user_settings.ini
-user_hotkeys.txt
+user_autocorrect.txt
+
+.vscode/settings.json
