--- a/user_settings.template.ini
+++ b/user_settings.template.ini
@@ -1,64 +1,41 @@
 [Environment]
-company = "Your_Company"
-user = "Your_Email"
-useToast = true
+user = "<your email>"
+company = "<your company>"
+startWithWindows = false
+enableCaseShiftingHotkeys = false
+enableExtendedRightMouseClick = false
 
-
-[KeyLocks]
+[AutoCorrect]
 enabled = true
-notify = true
-capsOnLoad = false
-numOnLoad = true
-scrollOnLoad = false
+on = ["default","user"]
+off = []
 
-
-[SwapMouseButtons]
+[DesktopFileDialogs]
 enabled = true
-active = false
-notify = false
+on = false
 
-
-[UserHotkeys]
+[DesktopHideMediaPopup]
 enabled = true
-active = true
-notify = true
+on = false
 
-
-[Volume]
+[DesktopHidePeekButton]
 enabled = true
-includeTens = true
-includeQuarters = true
-includeThirds = true
+on = false
 
+[KeyboardKeylocks]
+enabled = true
+on = ["num"]
+off = ["caps", "scroll"]
+
+[MouseSwapButtons]
+enabled = true
+on = false
 
 [VolumeMouseWheel]
 enabled = true
-active = true
-notify = true
+on = true
 step = 3
 
-
-[PreventSleep]
+[VolumeSteps]
 enabled = true
-active = false
-notify = false
-timeoutMins = 5
-
-
-
-
-; [DisableProxy]
-; enabled = false
-; active = false
-; notify = false
-
-; [EnableProxyOverrides]
-; enabled = false
-; active = false
-; notify = false
-; domainList = "*.your_domain.*"
-
-; [AppDebugging]
-; enabled = false
-; active = false
-; notify = false
+steps = [10, 20, 25, 30, 33, 40, 50, 60, 66, 70, 75, 80, 90, 100]
