--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ modules/TODO - disable-proxy.module.ahk
 modules/TODO - enable-proxy-overrides.module.ahk
 modules/TODO - prevent-sleep.module.ahk
 .vscode/launch.json
+main.code-workspace
