--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
+.vscode/
 resources/
-user_settings.ini
-user_autocorrect.txt
 
-.vscode/settings.json
-temp_test.ahk
+main.code-workspace
+settings.ini
+user.autocorrect.txt
+
 modules/TODO - disable-proxy.module.ahk
 modules/TODO - enable-proxy-overrides.module.ahk
+modules/TODO - keyboard-keylocks.module.ahk
 modules/TODO - prevent-sleep.module.ahk
-.vscode/launch.json
-main.code-workspace
