--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ modules/TODO - enable-proxy-overrides.module.ahk
 modules/TODO - keyboard-keylocks.module.ahk
 modules/TODO - prevent-sleep.module.ahk
 default.autocorrect.txt
+releases/
